--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "sistemagestionwendysicecream",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -14,5 +13,7 @@
     "better-sqlite3": "^11.9.1",
     "express": "^4.21.2",
     "typeorm": "^0.3.21"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
