--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   "dependencies": {
     "better-sqlite3": "^11.9.1",
     "express": "^4.21.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "typeorm": "^0.3.21"
   },
-  "devDependencies": {},
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@babel/preset-react": "^7.26.3",
+    "babel-loader": "^10.0.0",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
+  }
 }
