--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.21"
   },
   "description": "",
