--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^11.9.1",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "react-dom": "^19.0.0",
     "reflect-metadata": "^0.2.2",
