--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "better-sqlite3": "^11.9.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "multer": "^1.4.5-lts.2",
     "react-dom": "^19.0.0",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.21"
